test/Fail/Issue1213.err
Issue1213.agda:23.8-10: error: [UnequalTerms]
⊤ !=< ⊥
when checking that the expression tt has type IsZero (suc _15)
